deploy on railway app

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/neobis
+spring.datasource.url=jdbc:postgresql://postgres:31GEeafacDa3gEfGeeEBbAEDc*-5Ad32@monorail.proxy.rlwy.net:28651/railway
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=31GEeafacDa3gEfGeeEBbAEDc*-5Ad32
 
 
 spring.datasource.initialization-mode=always
