connect to cloudinary

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -14,3 +14,8 @@ jwt.secret=mobimarket
 server.error.include-message=always
 
 logging.level.org.springframework.security=DEBUG
+
+# Cloudinary credentials
+cloudinary.cloud_name=dl8rgsuwv
+cloudinary.api_key=171913828125245
+cloudinary.api_secret=WzryKMjR911FOhGiSdBTysdRDfY
