--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -14,6 +14,9 @@ jwt.secret=mobimarket
 server.error.include-message=always
 
 logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.orm.hibernate5=DEBUG
+
 
 # Cloudinary credentials
 cloudinary.cloud_name=dl8rgsuwv
