Add twilio dependency and it's config class

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -14,11 +14,16 @@ jwt.secret=mobimarket
 server.error.include-message=always
 
 logging.level.org.springframework.security=DEBUG
-#logging.level.org.hibernate=DEBUG
-#logging.level.org.springframework.orm.hibernate5=DEBUG
+# logging.level.org.hibernate=DEBUG
+# logging.level.org.springframework.orm.hibernate5=DEBUG
 
 
 # Cloudinary credentials
 cloudinary.cloud_name=dl8rgsuwv
 cloudinary.api_key=171913828125245
 cloudinary.api_secret=WzryKMjR911FOhGiSdBTysdRDfY
+
+  # Twilio credentials
+twilio.AccountSID=AC9631951ef211d2328916aa9f94cf6c5d
+twilio.AuthToken=dccf80d9940f82c1642ec97d567fca5d
+twilio.TrialNumber=+16508661089
