Remove twilio otp, add email otp

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -24,6 +24,14 @@ cloudinary.api_key=171913828125245
 cloudinary.api_secret=WzryKMjR911FOhGiSdBTysdRDfY
 
   # Twilio credentials
-twilio.AccountSID=${AccountSid}
-twilio.AuthToken=${AuthToken}
-twilio.TrialNumber=${TrialNumber}
+#twilio.AccountSID=${AccountSid}
+#twilio.AuthToken=${AuthToken}
+#twilio.TrialNumber=${TrialNumber}
+
+# Gmail credentials
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${gmail_username}
+spring.mail.password=${gmail_password}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
