Redeploying to railway

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:24478/railway
+spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:56925/railway
 spring.datasource.username=postgres
-spring.datasource.password=ED4*DbG5B6dfC5gA-2A6bcDFFe4*Ceff
+spring.datasource.password=c2FD-c1-GcFga1ADG1bfE3BCb3d12Dca
 
 
 spring.datasource.initialization-mode=always
