--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:56925/railway
+spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:38293/railway
 spring.datasource.username=postgres
-spring.datasource.password=c2FD-c1-GcFga1ADG1bfE3BCb3d12Dca
+spring.datasource.password=1-4G1cG6Efa5B-42g5G4dB4C3cgEdCDg
 
 
 spring.datasource.initialization-mode=always
