--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:38293/railway
+spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:18298/railway
 spring.datasource.username=postgres
-spring.datasource.password=1-4G1cG6Efa5B-42g5G4dB4C3cgEdCDg
+spring.datasource.password=FbG4d--a1C-4Af*ff2CdgF5A1E5EfgDG
 
 
 spring.datasource.initialization-mode=always
